1998-04-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Raster.m ([Raster -drawPointX:Y:Color:]): Pass a color index,
	not a pixel value to tkobjc_raster_drawPoint.

1998-04-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* common.m: Include internal.h instead of tk.h.

	* Form.m, Histogram.m: Include internal.h not TkExtra.h.

	* ArchivedGeometryWidget.h Button.h ButtonPanel.h Canvas.h
	CanvasItem.h CheckButton.h Circle.h ClassDisplayHideButton.h
	ClassDisplayLabel.h Colormap.h CompleteProbeDisplayLabel.h
	CompositeItem.h Entry.h Form.h Frame.h Graph.h Histogram.h
	InputWidget.h Label.h Line.h LinkItem.h MessageProbeEntry.h
	NodeItem.h OvalNodeItem.h Pixmap.h ProbeCanvas.h Raster.h
	Rectangle.h RectangleNodeItem.h SimpleProbeDisplayHideButton.h
	SuperButton.h TextItem.h VarProbeEntry.h VarProbeLabel.h Widget.h
	WindowGeometryRecord.h ZoomRaster.h: Include gui.h and add
	<_protocol> enforcement.

	* win32dib.[hc] (dib_line, dib_rectangle): New functions.

	* internal.[hm] (tkobjc_raster_line, tkobjc_raster_rectangle): New
	functions.

	* Raster.m ([Raster -setColormap:]): If colormap is nil, call erase.

	* Raster.[hm]: New methods lineX0:Y0:X1:Y1:Width:Color: and
	rectangleX0:Y0:X1:Y1:.

1998-04-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* testGraph.m, testHistogram.m: Don't include stdio.h, stdlib.h,
	or collections.h.
	
	* RectangleNodeItem.m: Include Widget.h and global.h.

	* Circle.m, Rectangle.h, RectangleNodeItem.h, TextItem.h: Don't
	include global.h or Widget.h.

	* LinkItem.m: Include NodeItem.h.

	* LinkItem.h: Don't include NodeItem.h.

	* common.m: Include misc.h instead of string.h.

	* CheckButton.m, Entry.m, Form.m: Don't include stdio.h, stdlib.h,
	or string.h.

	* TkExtra.m: Don't include stdarg.h, stdio.h, or string.h. Remove
	duplicate include of unistd.h. 

	* Entry.m: Don't include tclObjc.h or TkInterp.h.

	* Button.m, ButtonPanel.m, Circle.m, ClassDisplayHideButton.m,
	Histogram.m, Line.m, LinkItem.m, OvalNode.m, Rectangle.m,