@@ -1,3 +1,9 @@
+1998-04-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* ZoomRaster.m ([ZoomRaster ellipseX0:Y0:X1:Y1:Width:Color:],
+	[ZoomRaster lineX0:Y0:X1:Y1:Width:Color:], 
+	[ZoomRaster rectangleX0:Y0:X1:Y1:Width:Color:]): New methods.
+
 1998-04-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Raster.m ([Raster -drawPointX:Y:Color:]): Pass a color index,
